# obs-entei

./: CMakeLists.txt  README.md  buildspec.json
.github/actions/package-plugin/: action.yaml
.github/scripts/: .Brewfile  Package-Windows.ps1
.github/scripts/utils.pwsh/: Invoke-External.ps1  Logger.ps1
.github/scripts/utils.zsh/: setup_ubuntu
cmake/common/: buildspec_common.cmake  helpers_common.cmake
cmake/macos/: buildspec.cmake
cmake/windows/: buildspec.cmake
data/locale/: en-US.ini
src/: cJSON.c  cJSON.h  entei-caption-provider.c  entei-caption-provider.h  entei-dialog.cpp  entei-dialog.h  entei-provider.c  entei-provider.h  entei-tools.cpp  entei-tools.h  phoenix-protocol.c  phoenix-protocol.h  plugin-main.c  plugin-support.h  websocket-client.c  websocket-client.cpp  websocket-client.h
